# pathtracer

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: stdafx.h
include/core/: application.h  dx12_device.h  dx12_info_queue.h  swap_chain.h  window.h
include/interfaces/: hittable.h  pathtracer_interface.h
include/platform/: windows_fwd.h
include/ray/: ray.h
include/rendering/: compute_pathtracer.h  cpu_pathtracer.h  renderer.h
include/scene/: camera.h
include/shapes/: sphere.h
include/utils/: color.h  exception_macros.h  string_utils.h
shaders/: compute.hlsl  simple_pathtracer.hlsl
src/: CMakeLists.txt  main.cpp  stdafx.cpp
src/core/: application.cpp  dx12_device.cpp  dx12_info_queue.cpp  swap_chain.cpp  window.cpp
src/rendering/: compute_pathtracer.cpp  cpu_pathtracer.cpp  renderer.cpp
src/scene/: camera.cpp
